<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp"
        android:background="?attr/selectableItemBackground">


    <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:srcCompat="@drawable/ic_play"
            android:id="@+id/songItemImgBtnPlayPause"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="36dp"
            android:contentDescription="@string/play_or_pause"/>
    <TextView
            android:text="@string/artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/songItemTvArtist"
            app:layout_constraintStart_toEndOf="@+id/songItemImgBtnPlayPause"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/songItemImgBtnPlayPause"/>
    <TextView
            android:text="@string/song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/songItemTvTitle"
            app:layout_constraintStart_toEndOf="@+id/songItemImgBtnPlayPause"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/songItemTvArtist"/>
    <TextView
            android:text="@string/_00_00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/songItemTvDuration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/songItemTvTitle"
            android:layout_marginEnd="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>