<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainAddPlaylistFragment">

    <EditText android:layout_width="0dp"
              android:layout_height="48dp"
              android:id="@+id/addPlaylistEtPlaylistName"
              android:hint="@string/playlist_name"
              android:autofillHints="Playlist Name"
              android:inputType="text"
              android:textSize="18sp"
              android:layout_margin="16dp"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:id="@+id/addPlaylistBtnCancel"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toStartOf="@+id/addPlaylistBtnOk"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addPlaylistEtPlaylistName"/>
    <Button
            android:text="@string/ok"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:id="@+id/addPlaylistBtnOk"
            android:layout_margin="8dp"
            app:layout_constraintStart_toEndOf="@+id/addPlaylistBtnCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addPlaylistEtPlaylistName"/>


</androidx.constraintlayout.widget.ConstraintLayout>