<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp"
        android:paddingHorizontal="8dp">


    <CheckBox
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/songSelectorItemCheckBox"
            android:clickable="false"
            android:focusable="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
    />
    <TextView
            android:text="@string/artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/songSelectorItemTvArtist"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/songSelectorItemCheckBox"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/songSelectorItemTvTitle"
            app:layout_constraintTop_toBottomOf="@id/songSelectorItemTvArtist"
            app:layout_constraintStart_toStartOf="@id/songSelectorItemTvArtist"/>
    <TextView
            android:text="@string/_00_00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/songSelectorItemTvDuration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/songSelectorItemTvTitle"/>
</androidx.constraintlayout.widget.ConstraintLayout>