<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:context=".MainPlayerControllerFragment">

    <!-- Current playback time (left side). -->
    <TextView
            android:id="@+id/controllerTvCurrentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <!-- Total song time (right side). -->
    <TextView
            android:id="@+id/controllerTvTotalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <!-- Seek bar for playback position. -->
    <SeekBar
            android:id="@+id/controllerSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/controllerTvCurrentTime"
            app:layout_constraintEnd_toStartOf="@id/controllerTvTotalTime"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/controllerTvCurrentTime" />

    <!-- Main playback toggle button. -->
    <Button
            android:id="@+id/controllerBtnPlayPause"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/play_pause"
            app:layout_constraintTop_toBottomOf="@id/controllerSeekBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/controllerBtnStop"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
    />

    <!-- Stop playback button. -->
    <Button
            android:id="@+id/controllerBtnStop"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            app:layout_constraintTop_toBottomOf="@id/controllerSeekBar"
            app:layout_constraintStart_toEndOf="@id/controllerBtnPlayPause"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
    />

</androidx.constraintlayout.widget.ConstraintLayout>